namespace java com.orderseat.facade.enums

enum ResultCodeEnum {
    SUCCESS,

    FAIL,

    OTHER
}
